--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wagmi": "^0.12.8",
+    "@rainbow-me/rainbowkit": "^0.12.5"
   },
   "devDependencies": {
     "@mozilla/readability": "^0.4.4",
