--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
+    "@infura/sdk": "^2.2.0",
+    "@rainbow-me/rainbowkit": "^0.12.5",
     "@tabler/icons-react": "^2.9.0",
+    "@tiptap/pm": "^2.0.2",
+    "@tiptap/react": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2",
+    "dotenv": "^16.0.1",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
     "next": "13.2.4",
@@ -23,18 +29,14 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "4.8.0",
     "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.8",
-    "@rainbow-me/rainbowkit": "^0.12.5",
-    "@tiptap/react": "^2.0.2",
-    "@tiptap/pm": "^2.0.2",
-    "@tiptap/starter-kit": "^2.0.2",
-    "react-icons": "4.8.0"
+    "wagmi": "^0.12.8"
   },
   "devDependencies": {
     "@mozilla/readability": "^0.4.4",
@@ -56,7 +58,8 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "vitest": "^0.29.7"
   }
 }
